feat: add api client rbac
